roles/gateway/files/iptables-config
# Generated by iptables-save v1.4.21 on Tue Aug 23 16:22:37 2016
*nat
:PREROUTING ACCEPT [84:5220]
:INPUT ACCEPT [8:572]
:OUTPUT ACCEPT [30:2414]
:POSTROUTING ACCEPT [44:3266]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 993 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 587 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 993 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 587 -j DNAT --to-destination 10.8.0.2
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.8.0.2
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Aug 23 16:22:37 2016
# Generated by iptables-save v1.4.21 on Tue Aug 23 16:22:37 2016
*filter
:INPUT ACCEPT [20605:2674188]
:FORWARD ACCEPT [19999:51170086]
:OUTPUT ACCEPT [38128:54630981]
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 25 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 993 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 587 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 8443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i tun0 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 25 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 993 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 587 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eth0 -o tun0 -p tcp -m tcp --dport 8443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i tun0 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Aug 23 16:22:37 2016
